# 7th-convert

./: .gitignore  7th-vfx-convertor.bat  7th-vfx-convertor.desktop  7th-vfx-convertor.sh  README.md  README_UA.md  install-ffmpeg.bat  plan.md  pyproject.toml  requirements.txt
presets/: aac_audio.json  gif.json  h264_mp4.json  jpg_sequence.json  mp3_audio.json  png_sequence.json  prores_hq_mov.json  wav_pcm.json
seventh_convert/: __init__.py  cli.py  command_builder.py  converter.py  exr_metadata.py  ffprobe.py  media_support.py  presets.py  sequence.py  ui.py
seventh_convert/color_configs/: README.md
seventh_convert/preset_data/: __init__.py  dpx_sequence.json  exr_sequence.json  gif.json  h265_mp4.json  targa_sequence.json  wav_pcm.json
tests/: test_command_builder.py  test_exr_metadata.py  test_ui.py
