[project]
name = "7th-convert"
version = "0.3.0"
description = "Prototype for the 7th VFX convertor desktop media tool."
requires-python = ">=3.11"
dependencies = [
  "OpenEXR>=3.4",
  "PyOpenColorIO>=2.3",
  "PySide6>=6.6"
]

[project.scripts]
7th-convert = "seventh_convert.cli:main"
7th-convert-ui = "seventh_convert.ui:main"

[tool.setuptools.package-data]
seventh_convert = [
  "color_configs/README.md",
  "color_configs/*/config.ocio",
  "color_configs/*/luts/*",
  "assets/icons/*",
  "preset_data/*.json"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
